[package]
name = "mask"
version = "0.1.0"
description = "A CLI task runner defined by a simple markdown file"
authors = ["Jake Deichert <git@jakedeichert.com>"]
keywords = ["cli", "task", "command", "make", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2018"

[lib]
name = "mask"
path = "src/lib.rs"

[dependencies]
clap = "2.33.0"                                                         # https://github.com/clap-rs/clap
pulldown-cmark = { version = "0.5", default-features = false }          # https://github.com/raphlinus/pulldown-cmark
