[package]
name = "mask"
version = "0.2.0"
description = "A CLI task runner defined by a simple markdown file"
authors = ["Jake Deichert <git@jakedeichert.com>"]
repository = "https://github.com/jakedeichert/mask"
readme = "README.md"
keywords = ["cli", "task", "command", "make", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2018"
exclude = ["maskfile.md"]
license = "MIT"

[lib]
name = "mask"
path = "src/lib.rs"

[dependencies]
clap = "2.33.0"                                                         # https://github.com/clap-rs/clap
pulldown-cmark = { version = "0.5", default-features = false }          # https://github.com/raphlinus/pulldown-cmark
