[package]
name = "mask_parser"
version = "0.1.0"
authors = ["Jake Deichert <git@jakedeichert.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
pulldown-cmark = { version = "0.5", default-features = false }          # https://github.com/raphlinus/pulldown-cmark
serde = { version = "1.0", features = ["derive"] }                      # https://github.com/serde-rs/serde
serde_json = "1.0"                                                      # https://github.com/serde-rs/json
