[package]
name = "mask-parser"
version = "0.2.0"
description = "A parser for the maskfile.md format"
authors = ["Jake Deichert <git@jakedeichert.com>"]
repository = "https://github.com/jakedeichert/mask"
keywords = ["cli", "task", "command", "maskfile", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2018"
license = "MIT"

[dependencies]
pulldown-cmark = { version = "0.5", default-features = false }          # https://github.com/raphlinus/pulldown-cmark
serde = { version = "1.0", features = ["derive"] }                      # https://github.com/serde-rs/serde
serde_json = "1.0"                                                      # https://github.com/serde-rs/json
