[package]
name = "mask"
version = "0.10.0"
description = "A CLI task runner defined by a simple markdown file"
authors = ["Jake Deichert <git@jakedeichert.com>"]
repository = "https://github.com/jakedeichert/mask"
readme = "../README.md"
keywords = ["maskfile", "cli", "task", "command", "make", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2018"
exclude = ["maskfile.md", "CHANGELOG.md"]
license = "MIT"

[lib]
name = "mask"
path = "src/lib.rs"

[dependencies]
colored = "2"                                                           # https://github.com/mackwic/colored
mask-parser = { path = "../mask-parser" }

[dependencies.clap]                                                     # https://github.com/clap-rs/clap
version = "2.33"
features = ["wrap_help"]

[dev-dependencies]
assert_cmd = "1"                                                        # https://github.com/assert-rs/assert_cmd
assert_fs = "1"                                                         # https://github.com/assert-rs/assert_fs
predicates = "1"                                                        # https://github.com/assert-rs/predicates-rs
