[package]
name = "mask"
version = "0.11.1"
description = "A CLI task runner defined by a simple markdown file"
authors = ["Jake Deichert <git@jakedeichert.com>"]
repository = "https://github.com/jakedeichert/mask"
readme = "../README.md"
keywords = ["cli", "task", "command", "make", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2018"
license = "MIT"

[dependencies]
colored = "2"                                                           # https://github.com/mackwic/colored
serde_json = "1.0"                                                      # https://github.com/serde-rs/json
mask-parser = { path = "../mask-parser", version = "0.2" }

[dependencies.clap]                                                     # https://github.com/clap-rs/clap
version = "2.33"
features = ["wrap_help"]

[dev-dependencies]
assert_cmd = "1"                                                        # https://github.com/assert-rs/assert_cmd
assert_fs = "1"                                                         # https://github.com/assert-rs/assert_fs
predicates = "1"                                                        # https://github.com/assert-rs/predicates-rs
